# AutoDigipick

./: .gitignore  LICENSE.txt  README.md  autodigipick.py  autodigipick.spec  autodigipick.toml  pyproject.toml  requirements.txt  runtime_hook.py
autodigipick/: __init__.py  __main__.py
