[project]
name = "autodigipick"
version = "1.1.1"
description = "Automatically solve Starfield Digipick puzzles with the press of a button."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["Starfield", "solver", "OpenCV"]
authors = [
  {name = "ReggX", email = "dev@reggx.eu" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Games/Entertainment",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "opencv-python",
  "keyboard",
  "mss",
  "numpy",
  "pydirectinput-rgx",
  "pytesseract",
]

[project.urls]
"Homepage" = "https://github.com/reggx/autodigipick"

[project.scripts]
autodigipick = "autodigipick:run_AutoDigipick"

[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"
